--- a/about.html
+++ b/about.html
@@ -15,7 +15,6 @@
 			<div class="centered-container">
 				<div id="logo"> <a href="index.html"> abi miller </a> </div><!-- 
 					 --><nav id="main-nav">
-					 	<a href="index.html" id="nav-home">home</a>
 						<a href="about.html" id="nav-about">about</a>
 						<a href="work.html" id="nav-work">works</a>
 						<a href="cv.html" id="nav-CV">cv</a>
@@ -32,13 +31,14 @@
 				<h1 id="about">about</h1>
 						
 					<p class="about-p">
-						Abi Miller is currently a undergraduate student at the School of the Art Institute of Chicago, exploring photography, new media and visual communications. 
+						Abi Miller is currently a undergraduate student at the School of the Art Institute of Chicago, exploring photography, new media and visual communications. Originally from Los Angeles and now travelling between LA, San Francisco and Chicago.
 					</p>
 
 					<p class="about-p">
-						Her latest works discuss and dissect different systems particularly ones in relationship to the web and social media.
+						Her latest works discuss and dissect different systems particularly ones in relationship to the web and social media. She gained inspiration from this after interning on the social media team at a large new media production company. She greatly believes in interactivity and incorporating and listening to an audience. 
 					</p>
 
+					<img src="images/abi.jpg">
 
 					<footer>
 					<a href="http://www.facebook.com/SomewhatUnamusing">
